# goober

./: .dockerignore  .gitignore  AGENTS.md  Makefile  PRD.md  README.md  docker-compose.yml  index.html  pitch.html
server/: .env.example  Cargo.toml  README.md
server/.cargo/: config.toml
server/.sqlx/: query-000a36b3b446031270dd8dfed5bf7c4221c4ca07e2dfc962106da14a3d69764e.json  query-003f36b2529dfe797dc5ab90bff297e4c3835de5c25a3e34ee1cf19a73dad9af.json  query-01759e58d64fcc178e9647d92a69ccc4f4f57c18adc37d2fd1ed1942c0b0b8ba.json  query-08b4a79c0460e0b8a5541a240925f9076cf2d7c95ec9e0197b2512cfab05ed67.json  query-1403bd2ca90e65888c79dcf3c40c2f2f10ed2365e59b988fc5bae013fd2ab95c.json  query-159fb7f2043a1d40adc0bcfccc1367854986daf9876c4e5627696e0143e7488e.json  query-164734923fba8de6287c342f04fa184d91c151aaa6aa260fd9cf2bee9bde65c3.json  query-16e65490f79d8b23b3d620c2a365ee67053c83a14a7bbc87fbd87cdf4d3ce031.json  query-1af0b7d61a94cd830b56f2a05487f430ce7a5efd3aaadec7ed3b364ee61bc6a5.json  query-2b8ba3ea8ed367a3f0383ea589de0e0e980a16869592a32620da1e0648ededed.json  query-2bb2e1fd779381df66cee094a5b496d040b907e6055f609cd70d5fb0ec121396.json  query-4ae8bdc4dd1c4bc6c7416b53bb6f197382bfe6726368b733a632706fa36fecf7.json  query-57bc392cb9df9dbe20a0d48a53a3edfbaf229e8d52be0128d9defd0898182630.json  query-5802623dffe6923786364006fcc915396cc76df064eb6fdde08608a7d183461b.json  query-706fe3a38034b04bf900dd1202c7ea170306df7c3e8be261ddaa9ee9fa1ad0a9.json  query-7770f2269ae461745c3e7c4fd9976c029e70ee374d0e2c7d1b291b5ed37002cb.json  query-839e604c54656a3dc3ff342e06262b876bd6a48108f5d28945a014449c26a2bb.json  query-89e858146b34eb931b6a3dcc01d60ce0c1ce891e9e99ae84b6f35bbb9d6972b3.json  query-8b8811c08faba62403b47b9ccfd2d50574803b67f71f249539a4045578c3079a.json  query-8ce7a12175abcd8c7ba18152effebca215cbed13f5eb49d33df321a7ef747a7e.json  query-8dc36373bb8e6991e2f42fcaf6d1e8e8f8734b316df83de7878ddd9130091e49.json  query-8dd809ebfb555525a4e7e3295f660346af4c30315dc7592f67611a1093fbab31.json  query-91372f64bbd8dd7915cc13d27ea01a77fb7d5b5eacf0904ee6f81025d74a0296.json  query-92dc9982711871acdf167521dc9677c13e40cbb858ed27eb720dec5b36b28235.json  query-9a53a342c8c37729f1a26d6fd1538f85d90c053ab20dc9320a892d704aba3694.json  query-9b62f73479584f2a849eb49388a1ff2f4ec8e4bfb0ff49f9a2dffac323d74608.json  (+11 more)
server/migrations/: 0001_init.sql  0002_places.sql  0003_rides.sql  (+1 more)
(+53 files in other folders)
